<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CreatePlaylistFragment" >

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="538dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createPlaylistTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/give_your_playlist_a_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#2196F3"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="82dp" />

        <TextView
            android:id="@+id/createPlaylistOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createPlaylistNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createPlaylistWithName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/create" />

        <Button
            android:id="@+id/cancelPlaylistCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>